new assets - 360 and MP3

--- a/css/styles.css
+++ b/css/styles.css
@@ -10041,7 +10041,11 @@ hr.light {
 }
 
 .page-section {
-  padding: 8rem 0;
+  padding: 8rem 0 2rem 0;
+}
+
+.page-section-secondary {
+  padding: 0;
 }
 
 #mainNav {
