--- a/css/mapStyles.css
+++ b/css/mapStyles.css
@@ -57,6 +57,9 @@
     background: none;
     border: none;
     outline: none;
+    color: white;
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: white;
 }
 #return-to-map.active {
     opacity:1;
