--- a/css/pinboard.css
+++ b/css/pinboard.css
@@ -10,7 +10,7 @@
 .community-pinboard {
     column-count: 2;
     column-gap: 10px;
-    border-left:1px solid #d2d2ff;
+    border-left:1px solid #6161FF;
     padding-left:20px;
 }
 
