--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,11 @@
  */
 :root {
   --blue: #007bff;
-  --indigo:#d2d2ff;
+  --indigo:#6161FF;
   --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #dc3545;
-  --orange:#d2d2ff;
+  --orange:#6161FF;
   --yellow: #ffc107;
   --green: #28a745;
   --teal: #20c997;
@@ -24,7 +24,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #d2d2ff;
+  --primary: #6161FF;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -160,12 +160,12 @@ sup {
 }
 
 a {
-  color:#d2d2ff;
+  color:#6161FF;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #d2d2ff;
+  color: #6161FF;
   text-decoration: underline;
 }
 
@@ -1745,11 +1745,11 @@ pre code {
 }
 
 .table-hover .table-primary:hover {
-  background-color: #d2d2ff;
+  background-color: #6161FF;
 }
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #d2d2ff;
+  background-color: #6161FF;
 }
 
 .table-secondary,
@@ -2472,21 +2472,21 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  /* color: #d2d2ff77;
-  border-color: #d2d2ff77; */
+  /* color: #6161FF77;
+  border-color: #6161FF77; */
 }
 .btn-primary:hover {
-  color: #d2d2ff;
+  color: #6161FF;
 }
 
 .btn-primary:hover svg{
-  fill:#d2d2ff;
+  fill:#6161FF;
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #d2d2ff;
-  border-color: #d2d2ff;
+  background-color: #6161FF;
+  border-color: #6161FF;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
@@ -2704,25 +2704,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #d2d2ff;
-  border-color: #d2d2ff;
+  color: #6161FF;
+  border-color: #6161FF;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #d2d2ff;
-  border-color: #d2d2ff;
+  background-color: #6161FF;
+  border-color: #6161FF;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(244, 98, 58, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #d2d2ff;
+  color: #6161FF;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #d2d2ff;
-  border-color: #d2d2ff;
+  background-color: #6161FF;
+  border-color: #6161FF;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(244, 98, 58, 0.5);
@@ -2905,7 +2905,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 100;
-  color: #d2d2ff;
+  color: #6161FF;
   text-decoration: none;
 }
 .btn-link:hover {
@@ -3182,7 +3182,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3508,8 +3508,8 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #d2d2ff;
-  background-color: #d2d2ff;
+  border-color: #6161FF;
+  background-color: #6161FF;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(244, 98, 58, 0.25);
@@ -3564,8 +3564,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #d2d2ff;
-  background-color: #d2d2ff;
+  border-color: #6161FF;
+  background-color: #6161FF;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3767,7 +3767,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3796,7 +3796,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3828,7 +3828,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3949,7 +3949,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
 }
 
 .nav-fill .nav-item {
@@ -4602,7 +4602,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #d2d2ff;
+  color: #6161FF;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4631,8 +4631,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #d2d2ff;
-  border-color: #d2d2ff;
+  background-color: #6161FF;
+  border-color: #6161FF;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4708,11 +4708,11 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
 }
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
@@ -4986,7 +4986,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #d2d2ff;
+  background-color: #6161FF;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5067,8 +5067,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #d2d2ff;
-  border-color: #d2d2ff;
+  background-color: #6161FF;
+  border-color: #6161FF;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6096,13 +6096,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #d2d2ff !important;
+  background-color: #6161FF !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #d2d2ff !important;
+  background-color: #6161FF !important;
 }
 
 .bg-secondary {
@@ -6224,7 +6224,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #d2d2ff !important;
+  border-color: #6161FF !important;
 }
 
 .border-secondary {
@@ -9798,7 +9798,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #d2d2ff !important;
+  color: #6161FF !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10008,7 +10008,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #d2d2ff;
+  border-color: #6161FF;
 }
 
 hr.light {
@@ -10067,10 +10067,10 @@ hr.light {
   padding: 0.75rem 0;
 }
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
-  color: #d2d2ff;
+  color: #6161FF;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active {
-  color: #d2d2ff !important;
+  color: #6161FF !important;
 }
 @media (min-width: 992px) {
   #mainNav {
@@ -10089,7 +10089,7 @@ hr.light {
   }
   #mainNav .navbar-nav .nav-item .nav-link:hover {
     /* color: #fff; */
-    color: #d2d2ff;
+    color: #6161FF;
   }
   #mainNav .navbar-nav .nav-item:last-child .nav-link {
     padding-right: 0;
@@ -10102,13 +10102,13 @@ hr.light {
     color: #212529;
   }
   #mainNav.navbar-scrolled .navbar-brand:hover {
-    color: #d2d2ff;
+    color: #6161FF;
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link {
     color: #212529;
   }
   #mainNav.navbar-scrolled .navbar-nav .nav-item .nav-link:hover {
-    color: #d2d2ff;
+    color: #6161FF;
   }
 }
 
